syntax = "proto3";

package dk.via.mithus.protobuf;
option java_multiple_files = true;

service UserService {
  rpc CreateUser(RegisterUser) returns (User);
  rpc LoginUsers(LoginUser) returns (User);
  rpc FindUser(SearchField) returns (User);
}

service PostService {
  rpc CreatePost(Post) returns (Post);
  rpc FindPost(SearchField) returns (Post);
  rpc GetPosts(Void) returns (Posts);
  rpc GetPostsByLandlord(SearchField) returns (Posts);
  rpc UpdatePost(Post) returns (Void);
  rpc DeletePost(Post) returns (Void);
}

message Role {
  string name = 1;
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  string firstName = 4;
  string lastName = 5;
  repeated Role roles = 6;
}

message RegisterUser {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
}

message LoginUser {
  string email = 1;
  string password = 2;
}

message SearchField {
  string search = 1;
}

message Image {
  string address = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string description = 3;
  string street = 4;
  double area = 5;
  string type = 6;
  int32 maxTenants = 7;
  string energyRating = 8;
  double deposit = 9;
  double moveInPrice = 10;
  double utilities = 11;
  double monthlyRent = 12;
  string status = 13;
  bool isFurnished = 14;
  bool hasBalcony = 15;
  bool smokingAllowed = 16;
  bool hasParking = 17;
  bool hasDryer = 18;
  bool hasDishwasher = 19;
  bool hasWashingMachine = 20;
  repeated Image images = 21;
  string userId = 22;
}

message Posts {
  repeated Post posts = 1;
}

message Void {}
